created the functionalities to check answers and grade

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                     </div>
                     <div class="card-body">
                         <p>Which country prodcues the most coffee in the world?</p>
-                        <ul class="answers">
-                            <li class="btn" value="a">Brazil</li>
+                        <ul class="question1">
+                            <li class="btn" id="answer1" value="a">Brazil</li>
                             <hr>
-                            <li class="btn" value="b">Kenya</li>
+                            <li class="btn" id="answer1" value="b">Kenya</li>
                             <hr>
-                            <li class="btn" value="c">United States</li>
+                            <li class="btn" id="answer1" value="c">United States</li>
                         </ul>
                     </div>
-                    <a href="#q2" class="submitAns">Next</a>
+                    <a id ="next1" href="#q2" class="submitAns disable">Next</a>
                 </div>
             </div>
             <div class="card" id="q2">
@@ -47,15 +47,15 @@
                     </div>
                     <div class="card-body">
                         <p>What percentage of our bodies is made up of water?</p>
-                        <ul class="answers">
-                            <li class="btn" value="a">70-80%</li>
+                        <ul class="question2">
+                            <li class="btn" id="answer2" value="a">70-80%</li>
                             <hr>
-                            <li class="btn" vlaue="b">60-65%</li>
+                            <li class="btn" id="answer2" vlaue="b">60-65%</li>
                             <hr>
-                            <li class="btn" value="c">45-55%</li>
+                            <li class="btn" id="answer2" value="c">45-55%</li>
                         </ul>
                     </div>
-                    <a href="#q3" class="submitAns">Next</a>
+                    <a id ="next2" href="#q3" class="submitAns disable">Next</a>
                 </div>
             </div>
             <div class="card" id="q3">
@@ -66,15 +66,15 @@
                     </div>
                     <div class="card-body">
                         <p>What's the capital of Gabon?</p>
-                        <ul class="answers">
-                            <li class="btn" value="a">Libreville</li>
+                        <ul class="question3">
+                            <li class="btn" id="answer3" value="a">Libreville</li>
                             <hr>
-                            <li class="btn" value="b">Lesotho</li>
+                            <li class="btn" id="answer3" value="b">Lesotho</li>
                             <hr>
-                            <li class="btn" value="c">Dakar</li>
+                            <li class="btn" id="answer3" value="c">Dakar</li>
                         </ul>
                     </div>
-                    <a href="#q4" class="submitAns">Next</a>
+                    <a id ="next3" href="#q4" class="submitAns disable">Next</a>
                 </div>
             </div>
             <div class="card" id="q4">
@@ -85,15 +85,15 @@
                     </div>
                     <div class="card-body">
                         <p>What's the full meaning of NCDC?</p>
-                        <ul class="answers">
-                            <li class="btn" value="a">National Centre of Disease Controls</li>
+                        <ul class="question4">
+                            <li class="btn" id="answer4" value="a">National Centre of Disease Controls</li>
                             <hr>
-                            <li class="btn" value="b">Nigeria Commission of Disease Centre</li>
+                            <li class="btn" id="answer4" value="b">Nigeria Commission of Disease Centre</li>
                             <hr>
-                            <li class="btn" value="c">Nigeria Centre of Disease Control</li>
+                            <li class="btn" id="answer4" value="c">Nigeria Centre of Disease Control</li>
                         </ul>
                     </div>
-                    <a href="#q5" class="submitAns">Next</a>
+                    <a id ="next4" href="#q5" class="submitAns disable">Next</a>
                 </div>
             </div>
             <div class="card" id="q5">
@@ -104,15 +104,15 @@
                     </div>
                     <div class="card-body">
                         <p>What country phone code is +375?</p>
-                        <ul class="answers">
-                            <li class="btn" value="a">Canada</li>
+                        <ul class="question5">
+                            <li class="btn" id="answer5" value="a">Canada</li>
                             <hr>
-                            <li class="btn" value="b">Estonia</li>
+                            <li class="btn" id="answer5" value="b">Estonia</li>
                             <hr>
-                            <li class="btn" value="c">Belarus</li>
+                            <li class="btn" id="answer5" value="c">Belarus</li>
                         </ul>
                     </div>
-                    <a href="#result" class="submitAns">Result</a>
+                    <a id ="next5" href="#result" class="submitAns disable">Result</a>
                 </div>
             </div>
             <div class="card" id="result">
@@ -122,9 +122,9 @@
                         <h1 id="username"></h1>
                     </div>
                     <div class="card-body">
-                        <p>Your Score!</p>
-                        <p class="score">50</p>
-                        <p class="message">You got an average score!</p>
+                        <p>You Score!</p>
+                        <p class="score"></p>
+                        <p class="message"></p>
                     </div>
                 </div>
             </div>
