modify the score to be in a scoreboard on each questions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <div class="card-head">
                         <h1>eQuiz</h1>
                         <h4>Question 1/5</h4>
+                        <div id="score1"></div>
                     </div>
                     <div class="card-body">
                         <p>Which country prodcues the most coffee in the world?</p>
@@ -44,6 +45,7 @@
                     <div class="card-head">
                         <h1>eQuiz</h1>
                         <h4>Question 2/5</h4>
+                        <div id="score2"></div>
                     </div>
                     <div class="card-body">
                         <p>What percentage of our bodies is made up of water?</p>
@@ -63,6 +65,7 @@
                     <div class="card-head" >
                         <h1>eQuiz</h1>
                         <h4>Question 3/5</h4>
+                        <div id="score3"></div>
                     </div>
                     <div class="card-body">
                         <p>What's the capital of Gabon?</p>
@@ -82,6 +85,7 @@
                     <div class="card-head">
                         <h1>eQuiz</h1>
                         <h4>Question 4/5</h4>
+                        <div id="score4"></div>
                     </div>
                     <div class="card-body">
                         <p>What's the full meaning of NCDC?</p>
@@ -101,6 +105,7 @@
                     <div class="card-head">
                         <h1>eQuiz</h1>
                         <h4>Question 5/5</h4>
+                        <div id="score5"></div>
                     </div>
                     <div class="card-body">
                         <p>What country phone code is +375?</p>
@@ -123,8 +128,8 @@
                     </div>
                     <div class="card-body">
                         <p>You Score!</p>
-                        <p class="score"></p>
-                        <p class="message"></p>
+                        <div class="score"></div>
+                        <!-- <p class="message"></p> -->
                     </div>
                 </div>
             </div>
