Modify the score sheet to the total scores

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                     </div>
                     <div class="card-body">
                         <p>You Score!</p>
-                        <div class="score"></div>
-                        <!-- <p class="message"></p> -->
+                        <div id="score"></div>
+                        <p class="message"></p>
                     </div>
                 </div>
             </div>
