Modify to display the correct questions answered by the user

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
                         <h1 id="username"></h1>
                     </div>
                     <div class="card-body">
-                        <p>You Score!</p>
-                        <div id="score"></div>
-                        <p class="message"></p>
+                        <p id="message"></p>
+                        <p>Your Total Score is:</p>
+                        <p id="score"></p>
                     </div>
                 </div>
             </div>
